# hdb-price-prediction

./: .gitignore  Makefile  README.md  pyproject.toml  render.yaml  requirements-web.txt  requirements.txt
app/: api.py  dashboard.py
app/static/: index.html
data/processed/: feature_importances.csv  model_comparison.csv  valuations.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_data_collection_and_cleaning.ipynb  02_exploratory_data_analysis.ipynb  03_feature_engineering.ipynb  04_model_building_and_tuning.ipynb  05_overpriced_underpriced_analysis.ipynb
sg_hdb_price_analysis/data/: fetch.py  geocode.py  transit.py
sg_hdb_price_analysis/features/: engineering.py  spatial.py
sg_hdb_price_analysis/models/: experiment.py  train.py
